--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -14,6 +14,15 @@
 </head>
 <body>
     <div class="login-box">
+        {% if messages %}
+            <div class="messages">
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
         <h2>서비스 로그인</h2>
         <p>구글 계정으로 간편하게 시작하세요.</p>
         <br>
