adminLTE 템플릿 추가

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Main Page</title>
-</head>
-<body>
-    <h2>환영합니다, {{ request.user.username }} / {{ request.user.last_name }} {{ request.user.first_name }} 님!</h2>
-    <p>이곳은 로그인 후 접근 가능한 메인 페이지입니다.</p>
-    <a href="{% url 'account_logout' %}">로그아웃</a>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block main_html %}
+    <div class="container-fluid px-4">
+        <h2>환영합니다, {{ request.user.username }} / {{ request.user.last_name }} {{ request.user.first_name }} 님!</h2>
+        <p>이곳은 로그인 후 접근 가능한 메인 페이지입니다.</p>
+        <a href="{% url 'account_logout' %}">로그아웃</a>
+    </div>
+{% endblock %}
