sample index js 순서 조정

--- a/templates/index.html
+++ b/templates/index.html
@@ -318,6 +318,7 @@
 {% endblock %}
 
 {% block main_js %}
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts@3.37.1/dist/apexcharts.min.js"></script>
     <script>
         // NOTICE!! DO NOT USE ANY OF THIS JAVASCRIPT
         // IT'S ALL JUST JUNK FOR DEMO
@@ -428,6 +429,5 @@
         );
         sales_chart.render();
     </script>
-
     <script src="https://cdn.jsdelivr.net/npm/apexcharts@3.37.1/dist/apexcharts.min.js"></script>
 {% endblock %}
