--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/css/adminlte.min.css">
+{#    <link rel="stylesheet" href="{% static 'dist/css/adminlte.min.css' %}">#}
     <!-- OPTIONAL SCRIPTS -->
     {% block extra_css %}
     {% endblock %}
