--- a/templates/header.html
+++ b/templates/header.html
@@ -11,6 +11,10 @@
         <li class="nav-item d-none d-sm-inline-block">
             <a href="{% url 'main' %}" class="nav-link">Main</a>
         </li>
+        <li class="nav-item d-none d-sm-inline-block">
+            <a href="/admin" class="nav-link">admin</a>
+        </li>
+
     </ul>
 
     <!-- Right navbar links -->
